fix(css): styling for tags on mobile

--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -515,12 +515,12 @@ body {
 
 @media all and ($tablet) {
   menu.tags {
-    grid-column: 3/8;
+    grid-column: 3/6;
   }
 }
 @media all and ($mobile) {
   menu.tags {
-    grid-column: 3/8;
+    grid-column: 3/6;
   }
 }
 
